--- a/health_parent/health_service/pom.xml
+++ b/health_parent/health_service/pom.xml
@@ -25,5 +25,21 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!--QuietBoat  添加jackson依赖  2019-08-29-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.9.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.9.4</version>
+        </dependency>
     </dependencies>
 </project>
